--- a/index.html
+++ b/index.html
@@ -130,7 +130,11 @@
 
   <section id="about" class="about">
     <h2>About Me</h2>
-    <p>Hello! I'm a web developer with a passion for building modern, responsive websites. I enjoy turning complex problems into simple, beautiful designs.</p>
+    <p> Hello, I'm Rajmohan Hazowary, a B.Sc. 3rd semester student at PDUAM, Amjonga, currently pursuing a Bachelor of Science in Computer Science.
+
+I'm passionate about technology and constantly exploring the world of programming and development. My current skillset includes C++, web development, and I'm always eager to learn more and take on new challenges in the tech space.
+
+This site is a place where I share my projects, ideas, and learning journey. Whether you're a fellow student, a professor, or just someone curious about what I'm working on, feel free to take a look around and connect with me!</p>
   </section>
 
   <section id="portfolio">
@@ -167,3 +171,4 @@
 
 </body>
 </html>
+
