--- a/index.html
+++ b/index.html
@@ -132,9 +132,7 @@
     <h2>About Me</h2>
     <p> Hello, I'm Rajmohan Hazowary, a B.Sc. 3rd semester student at PDUAM, Amjonga, currently pursuing a Bachelor of Science in Computer Science.
 
-I'm passionate about technology and constantly exploring the world of programming and development. My current skillset includes C++, web development, and I'm always eager to learn more and take on new challenges in the tech space.
-
-This site is a place where I share my projects, ideas, and learning journey. Whether you're a fellow student, a professor, or just someone curious about what I'm working on, feel free to take a look around and connect with me!</p>
+I'm passionate about technology and constantly exploring the world of programming and development. My current skillset includes C++, web development, and I'm always eager to learn more and take on new challenges in the tech space.</p>
   </section>
 
   <section id="portfolio">
@@ -171,4 +169,5 @@ This site is a place where I share my projects, ideas, and learning journey. Whe
 
 </body>
 </html>
+
 
