--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
   <section id="about" class="about">
     <h2>About Me</h2>
-    <p> Hello, I'm Rajmohan Hazowary, a B.Sc. 3rd semester student at PDUAM, Amjonga, currently pursuing a Bachelor of Science in Computer Science.
+    <p> Hello, I'm <b>Rajmohan Hazowary</b>, a B.Sc 3rd semester student at <b>PDUAM</b>, <b>Amjonga</b>, currently pursuing a <b>Bachelor of Science in Computer Science</b>.
 
 I'm passionate about technology and constantly exploring the world of programming and development. My current skillset includes C++, web development, and I'm always eager to learn more and take on new challenges in the tech space.</p>
   </section>
@@ -169,5 +169,6 @@ I'm passionate about technology and constantly exploring the world of programmin
 
 </body>
 </html>
+
 
 
