--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ I'm passionate about technology and constantly exploring the world of programmin
     <h2>My Work</h2>
     <div class="portfolio">
       <div class="project">
-        <h3>Project One</h3>
+        <h3><a href="">Project One</a></h3>
         <p>Short description of the project. What you built, what tech you used, etc.</p>
       </div>
       <div class="project">
@@ -169,6 +169,7 @@ I'm passionate about technology and constantly exploring the world of programmin
 
 </body>
 </html>
+
 
 
 
