--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ I'm passionate about technology and constantly exploring the world of programmin
     <h2>My Work</h2>
     <div class="portfolio">
       <div class="project">
-        <h3><a href="project01.html">Project One</a></h3>
+        <h3>Project One</h3>
         <p>Short description of the project. What you built, what tech you used, etc.</p>
         <a href="project01.html">View</a>
       </div>
@@ -170,6 +170,7 @@ I'm passionate about technology and constantly exploring the world of programmin
 
 </body>
 </html>
+
 
 
 
