--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ I'm passionate about technology and constantly exploring the world of programmin
       <div class="project">
         <h3>Project One</h3>
         <p>Short description of the project. What you built, what tech you used, etc.</p>
-        <a href="project01.html">View</a>
+        <a href="project01.html"><button>View</button></a>
       </div>
       <div class="project">
         <h3>Project Two</h3>
@@ -170,6 +170,7 @@ I'm passionate about technology and constantly exploring the world of programmin
 
 </body>
 </html>
+
 
 
 
