--- a/index.html
+++ b/index.html
@@ -156,26 +156,27 @@ I'm passionate about technology and constantly exploring the world of programmin
 
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
-    <form>
+    
+    <!--<form>
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
       <button type="submit">Send Message</button>
-    </form>
+    </form>-->
+
+    <form action="https://formspree.io/f/mqadozwd" method="POST">
+  <input type="text" name="name" placeholder="Your Name" required />
+  <input type="email" name="email" placeholder="Your Email" required />
+  <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+  <button type="submit">Send Message</button>
+</form>
+
   </section>
 
+    <script src="form.js"></script>
   <footer>
     <p>&copy; 2025 Your Name. All rights reserved.</p>
   </footer>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
