--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@ I'm passionate about technology and constantly exploring the world of programmin
   <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
   <button type="submit">Send Message</button>
 </form>
-
+<div>
+  <p id="form-status" style="margin-top: 15px;"></p>
+</div>
   </section>
 
     <script src="form.js"></script>
@@ -180,3 +182,4 @@ I'm passionate about technology and constantly exploring the world of programmin
 
 </body>
 </html>
+
