--- a/index.html
+++ b/index.html
@@ -140,16 +140,16 @@ I'm passionate about technology and constantly exploring the world of programmin
     <div class="portfolio">
       <div class="project">
         <h3>Project One</h3>
-        <p>Short description of the project. What you built, what tech you used, etc.</p>
+        <p>Short description of my project. What I built, what tech I used, etc.</p>
         <a href="project01.html"><button>View</button></a>
       </div>
       <div class="project">
         <h3>Project Two</h3>
-        <p>Short description of the project. What you built, what tech you used, etc.</p>
+        <p>Short description of my project. What I built, what tech I used, etc.</p>
       </div>
       <div class="project">
         <h3>Project Three</h3>
-        <p>Short description of the project. What you built, what tech you used, etc.</p>
+        <p>Short description of my project. What I built, what tech I used, etc.</p>
       </div>
     </div>
   </section>
@@ -182,4 +182,5 @@ I'm passionate about technology and constantly exploring the world of programmin
 
 </body>
 </html>
+
 
