--- a/aboutme.html
+++ b/aboutme.html
@@ -42,7 +42,7 @@
 
   <section class="about" id="about">
     <h2>About Me</h2>
-    <p>Hello! I'm <strong>Your Name</strong>, a dedicated and detail-oriented web developer with a strong focus on creating clean, responsive, and user-centric digital experiences.</p>
+    <p>Hello! I'm <strong>Rajmohan Hazowary</strong>, a dedicated and detail-oriented web developer with a strong focus on creating clean, responsive, and user-centric digital experiences.</p>
 
     <p>I specialize in front-end development using technologies such as <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, and frameworks like <strong>React</strong>. With a solid understanding of modern web standards and best practices, I build interfaces that are not only functional but also visually refined.</p>
 
@@ -55,3 +55,4 @@
 
 </body>
 </html>
+
