--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>About Me | Portfolio</title>
+  <title>Rajmohan Hazowary | Portfolio</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -55,4 +55,5 @@
 
 </body>
 </html>
+
 
