--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Your Name | Portfolio</title>
+  <title>Rajmohan Hazowary | Portfolio</title>
   <style>
     * {
       margin: 0;
@@ -182,5 +182,6 @@ I'm passionate about technology and constantly exploring the world of programmin
 
 </body>
 </html>
+
 
 
